--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Travel Planner App</title>
 
   <script type="text/javascript" src="angular/angular.min.js"></script>
   <script type="text/javascript" src="angular-route/angular-route.min.js"></script>
