started google api addition

--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,7 @@
   <script type="text/javascript" src="./controllers/homeController.js"></script>
   <script type="text/javascript" src="./app.js"></script>
   <script type="text/javascript" src="./factories/dataFactory.js"></script>
-  <script type="text/JavaScript" src="https://www.kayak.com/affiliate/widget.js"></script>
-
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3kKZ34v8IotpT4arxzCTsgCl3WPRcyN8&libraries=places"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
    <link rel="stylesheet" href="style.css">
 </head>
